--- a/portfolio/index.css
+++ b/portfolio/index.css
@@ -18,7 +18,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-
+  overflow-y: hidden;
   background-color: #0e0e0e;
   margin: 0;
 }
@@ -28,12 +28,12 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px 0;
-  position: fixed;
-  top: 0;
-  width: 1812px;
+  border-bottom: 1px solid #444;
+  width: 100%;
   z-index: 1000;
   height: 100px; /* 명시적인 높이 설정 */
   box-sizing: border-box; /* 패딩 포함 */
+  background-color: #0e0e0e;
 }
 
 .header .logo {
@@ -51,7 +51,7 @@ body {
   justify-content: center;
   gap: 20px;
   width: 100%; /* 화면 축소 시 대응 */
-  padding: 100px 0px 40px; /* 헤더 공간 확보 */
+  padding: 40px 0px 40px; /* 헤더 공간 확보 */
   height: 100vh;
   box-sizing: border-box;
   width: 1812px;
@@ -64,7 +64,7 @@ body {
   gap: 20px;
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 760px;
 }
 .content-top {
   width: 100%;
@@ -75,6 +75,7 @@ body {
   align-items: start;
   margin-bottom: 10px;
   border-bottom: 1px solid #444;
+  width: 100%;
 }
 .number {
   font-size: 140px;
@@ -170,12 +171,14 @@ body {
   justify-content: end;
   align-items: center;
   width: 802px;
+
+  height: 760px;
 }
 .image_line {
   width: 1px;
   height: 100%;
   border-left: 1px solid #444;
-  margin-right: 40px;
+  margin-right: 30px;
 }
 
 #image {
@@ -201,3 +204,6 @@ body {
   background-color: #333; /* 활성화 상태 배경색 */
   color: white; /* 활성화 상태 텍스트 색상 */
 }
+
+/*
+*/
