--- a/portfolio/index.css
+++ b/portfolio/index.css
@@ -28,17 +28,21 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px 0;
-  position: fixed;
-  top: 0;
   width: 1812px;
   z-index: 1000;
   height: 100px; /* 명시적인 높이 설정 */
   box-sizing: border-box; /* 패딩 포함 */
+  border-bottom: solid 1px #444;
 }
 
 .header .logo {
-  font-size: 1.5rem;
+  width:259px;
   color: white;
+  display: flex;
+  align-items: center;
+}
+.logo > img {
+  width: 100%;
 }
 
 .header .menu {
@@ -51,7 +55,7 @@ body {
   justify-content: center;
   gap: 20px;
   width: 100%; /* 화면 축소 시 대응 */
-  padding: 100px 0px 40px; /* 헤더 공간 확보 */
+  padding: 40px 0px 40px; /* 헤더 공간 확보 */
   height: 100vh;
   box-sizing: border-box;
   width: 1812px;
@@ -169,7 +173,7 @@ body {
   display: flex;
   justify-content: end;
   align-items: center;
-  width: 802px;
+  width: 1030px;
 }
 .image_line {
   width: 1px;
@@ -179,6 +183,7 @@ body {
 }
 
 #image {
+  width: 690px;
   height: 100%;
 }
 
