--- a/portfolio/index.css
+++ b/portfolio/index.css
@@ -28,30 +28,27 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 20px 0;
-<<<<<<< HEAD
-  width: 1812px;
-  z-index: 1000;
-  height: 100px; /* 명시적인 높이 설정 */
-  box-sizing: border-box; /* 패딩 포함 */
-  border-bottom: solid 1px #444;
-=======
-  border-bottom: 1px solid #444;
   width: 100%;
   z-index: 1000;
   height: 100px; /* 명시적인 높이 설정 */
   box-sizing: border-box; /* 패딩 포함 */
-  background-color: #0e0e0e;
->>>>>>> 4cea3b1cd74d9a026d850948beac7f5475ed4d4a
+  border-bottom: solid 1px #444;
 }
 
 .header .logo {
-  width:259px;
+  width: 259px;
   color: white;
   display: flex;
   align-items: center;
 }
 .logo > img {
   width: 100%;
+}
+
+.logo a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header .menu {
@@ -63,21 +60,20 @@ body {
   display: flex;
   justify-content: center;
   gap: 20px;
-  width: 100%; /* 화면 축소 시 대응 */
-  padding: 40px 0px 40px; /* 헤더 공간 확보 */
+  width: 80%; /* 화면 축소 시 대응 */
+  padding: 30px 0px 40px; /* 헤더 공간 확보 */
   height: 100vh;
   box-sizing: border-box;
-  width: 1812px;
+  width: 1118px;
 }
 
 .content {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   gap: 20px;
   position: relative;
   width: 100%;
-  height: 760px;
+  height: 100vh;
 }
 .content-top {
   width: 100%;
@@ -90,12 +86,14 @@ body {
   border-bottom: 1px solid #444;
   width: 100%;
 }
+
 .number {
   font-size: 140px;
   color: white;
   text-align: right;
   font-weight: 700;
   display: flex;
+  align-items: start;
 }
 
 .titles {
@@ -117,7 +115,7 @@ body {
   font-size: 14px;
 }
 .title span:last-child {
-  margin-left: 20px;
+  margin-left: 10px;
 }
 .title.active {
   background-color: #212121;
@@ -164,8 +162,16 @@ body {
 
 .content-bottom {
   border-top: 1px solid #444;
-  padding: 20px 0 0;
+  margin-top: 20px;
 }
+
+.content-top_2 {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
 .description {
   color: #fff;
   border-radius: 8px;
@@ -177,30 +183,27 @@ body {
   word-wrap: break-word; /* 긴 단어 줄바꿈 */
   height: auto; /* 높이 자동 조정 */
   font-weight: light;
+  margin-left: 40px;
 }
 
 .image {
   display: flex;
-  justify-content: end;
   align-items: center;
-<<<<<<< HEAD
-  width: 1030px;
-=======
-  width: 802px;
-
-  height: 760px;
->>>>>>> 4cea3b1cd74d9a026d850948beac7f5475ed4d4a
+  width: 900px;
+  height: 354px;
+  margin-right: 40px;
 }
 .image_line {
   width: 1px;
   height: 100%;
   border-left: 1px solid #444;
-  margin-right: 30px;
 }
 
 #image {
-  width: 690px;
+  width: 100%;
   height: 100%;
+
+  margin-right: 40px;
 }
 
 /* 이미지 전환 애니메이션 */
